# cpp-samples

boost_variant/lib/: CMakeLists.txt  hello.cc  hello.h
boost_variant/src/: CMakeLists.txt  main.cc
compile_and_link/: README.md  compile_and_link.sh
crypto/: CMakeLists.txt  common.h
crypto/hash/: hash.cc
crypto/kdf/: hkdf.cc  pbkdf2.cc
dlopen/: CMakeLists.txt  idclient.cc  idclient.h  infoclient.cc  infoclient.h  main.cc  manager.cc  manager.h
docs/: ABI-Compatibility.md
func_ptr/: CMakeLists.txt  main.cc
grok/: CMakeLists.txt  main.cc
